--- a/ctAndroidClient/res/layout/activity_rest_service.xml
+++ b/ctAndroidClient/res/layout/activity_rest_service.xml
@@ -1,5 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragment_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" />
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:padding="20dip">
+    
+    <Button 
+        android:id="@+id/buttonToFirstActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FirstActivity"
+        android:ems="15"
+        android:onClick="onClickFirst">
+     </Button>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+    
+    </LinearLayout>
